--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta content="yes" name="apple-touch-fullscreen" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
     />
     <title>Peek - transfer</title>
+    <link
+      rel="alternate icon"
+      href="/favicon.ico"
+      type="image/png"
+      sizes="16x16"
+    />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+    <meta name="theme-color" content="#00867d" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      content="black-translucent"
+      name="apple-mobile-web-app-status-bar-style"
+    />
   </head>
   <body>
     <div id="app"></div>
