--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
     />
-    <title>Peek - transfer</title>
+    <title>Peek - File Transfer</title>
+    <meta name="description" content="Quickly transfer file & text through P2P! 点对点快速传输任意文件！" />
     <link
       rel="alternate icon"
       href="/favicon.ico"
